# yubigen

./: .envrc-nix  .envrc.recommended  .gitignore  README.md  flake.nix  pyproject.toml
docs/: config.toml
lib/udev/rules.d/: 69-yubigen.rules
nix/: home-manager.nix  nixos.nix  package.nix  shell.nix
src/yubigen/: __main__.py  config.py  core.py  main.py  module.py  pgp.py  setup.py  ssh.py  u2f.py
src/yubigen/cli/: pgp.py  setup.py  ssh.py
