[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yubigen"
version = "0.0.1"
description = "Credential management helper for YubiKeys."
license = "MIT"
authors = ["Xarvex"]
readme = "README.md"
repository = "https://gitlab.com/xarvex/yubigen"
keywords = ["openssh", "ssh", "yubikey"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
click = "^8.1"
platformdirs = "^4.3"
pydantic = "^2.9"
python = "^3.11"
yubikey-manager = "^5.5"

[tool.poetry.scripts]
yubigen = "yubigen.main:main"

[tool.ruff]
target-version = "py311"
line-length = 140
fix = true

[tool.ruff.format]
preview = true
